--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,8 @@
 .homeWrapper{
-    background-image: url(https://raw.githubusercontent.com/ElizaCalmau/Lucy_drawing/develop/src/assets/hero_bg.jpg?token=GHSAT0AAAAAACIKVT7VW5MSWCAC3US6ILC2ZNVABYA);
+    background-image: url('https://raw.githubusercontent.com/ElizaCalmau/Lucy_drawing/develop/src/assets/hero_bg.jpg?token=GHSAT0AAAAAACIKVT7VW5MSWCAC3US6ILC2ZNVABYA');
+    width: 100vw;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
