--- a/src/cmps/Contacts/Contacts.css
+++ b/src/cmps/Contacts/Contacts.css
@@ -2,3 +2,24 @@
     z-index: 100;
     position: relative;
 }
+
+.contactsTel, .contactsLoc{
+    display: flex;
+    align-items: center;
+}
+
+.telIcon {
+    background-image: url('/src/assets/telephone.svg');
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+}
+
+.locIcon {
+    background-image: url('/src/assets/Vector.svg');
+    width: 18px;
+    height: 24px;
+    background-size: cover;
+    padding: 3px;
+    margin: 10px;
+}
