--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .homeWrapper{
-    background-image: url('https://raw.githubusercontent.com/ElizaCalmau/Lucy_drawing/develop/src/assets/hero_bg.jpg?token=GHSAT0AAAAAACIKVT7VW5MSWCAC3US6ILC2ZNVABYA');
+    background-image: url('../../assets/Lucy-11.jpg');
     width: 100vw;
-    height: 35em;
+    height: 60%;
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
@@ -12,7 +12,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.202);
+    background-color: rgba(0, 0, 0, 30%);
     width: 100%;
     height: 100%;
 }
