add linear gradient to hero, styled nav  buttons

--- a/src/cmps/Contacts/Contacts.css
+++ b/src/cmps/Contacts/Contacts.css
@@ -16,7 +16,7 @@
 }
 
 .locIcon {
-    background-image: url('/src/assets/Vector.svg');
+    background-image: url('/src/assets/location.svg');
     width: 18px;
     height: 24px;
     background-size: cover;
