--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .homeWrapper{
     background-image: url('../../assets/Lucy-11.jpg');
     width: 100vw;
-    height: 65%;
+    height: 33em;
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
