--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .homeWrapper{
     background-image: url('../../assets/Lucy-11.jpg');
     width: 100vw;
-    height: 33em;
+    height: 100vh;
     position: relative;
     background-position: center;
     background-repeat: no-repeat;
@@ -16,7 +16,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: linear-gradient(rgb(0 0 0 / 86%), rgb(108 108 108 / 55%));
+    background: linear-gradient(rgb(0 0 0 / 90%), rgb(108 108 108 / 0%));
     width: 100%;
     height: 100%;
 }
